@@ -1,3 +1,2 @@
-DIST fuzzywuzzy-0.6.1.tar.gz 17019 SHA256 31229378f6eb0f44f74fa562b9f940d2fc94ea6bd824d5b9a59fe0ac3eda9237 SHA512 d805e5817d1a8801b33c0ce3aa39cccef74e232b58f3d323bc43cfb2a365330f14b8149b9bf1988ad424c2dc97ab18c11d6a2244a0792818b2079fcc1dfb394b WHIRLPOOL 7472bb6971c1bd4427ad673ea0315ed1780e4ec67815c83a4c9039ee51cd051fcf01c2b4fc6d6776318d66f0ff1a9c1544c0df257c2608a3cbcea5b9b29aee63
 DIST fuzzywuzzy-0.7.0.tar.gz 17644 SHA256 03925bc6e3e0fa9491e33bde07f3bec9f3d8b511e871c3b37c9063a9e1667aaf SHA512 1ddd0adaca694464c82dac4ca58d84834ba3240f600772f6d42c72af31b32d8e63d8a31e35a14387c688a45657623e9a7bf84c59d548af8989aa265d2c051173 WHIRLPOOL 16b39d094f5e36529b18b8d16167526de06726266b44ea9eef3966f720ee4efa1ccda5b60e82ad949a30a5236052b052131727493482bc5bf1cd10d9c0125c81
 DIST fuzzywuzzy-0.8.0.tar.gz 64895 SHA256 147cbb94216d9313499cbd2af9e30e0c2114a7460107357c2d0c81375b2a3b54 SHA512 e6e64eb8f0b7664f4f9fd18468617c75b1a97b9a6ff3a5db64f4b8fa5e8edaee1e5ebc107164d49771b77374817de277a846cfbf544700ab989391980815f585 WHIRLPOOL 3a0b5a3068bd9a8550896dbde83e59721d0a9f5490543fa557da20115968c63c6bb3488e60598af9cafcc6e9f4b216b9b704ce23fd276a0c7b64a8f00d7b5993
