@@ -1,21 +1,0 @@
-# Copyright 1999-2015 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Id$
-
-EAPI=5
-
-PYTHON_COMPAT=( python2_7 python3_{3,4} )
-
-inherit distutils-r1
-
-DESCRIPTION="Fuzzy String Matching in Python"
-HOMEPAGE="https://github.com/seatgeek/fuzzywuzzy"
-SRC_URI="https://github.com/seatgeek/${PN}/archive/${PV}.tar.gz -> ${P}.tar.gz"
-
-LICENSE="BSD"
-SLOT="0"
-KEYWORDS="~amd64 ~x86"
-IUSE=""
-
-DEPEND=""
-RDEPEND="dev-python/python-levenshtein[${PYTHON_USEDEP}]"
